--- a/_imports/footer.html
+++ b/_imports/footer.html
@@ -1,80 +1,125 @@
-<div class="bg-black text-white min-h-screen pt-8 pb-16">
+<div class="bg-black text-white min-h-screen pt-2 pb-16 overflow-hidden">
 
   <!-- Middle content for Desktop -->
-  <div class="md:flex justify-between p-4">
+  <div class="md:flex justify-between p-4 md:px-12">
 
     <!-- Top logo and social icons row (Desktop view) -->
-  <div class="md:flex md:flex-col justify-between md:justify-start items-center md:items-start mb-8">
-    <h1 class="text-2xl font-bold mb-4">
-    <a class="inline-block" href="index.html"><img src="assets/images/logo-wordmark.svg" width="300"></a>
+  <div class="md:flex md:flex-col justify-between md:justify-start items-center md:items-start mb-10 z-10 relative">
+    <h1 class="text-2xl font-bold mb-3 text-center w-full">
+    <a class="inline-block" href="index.html"><img src="assets/images/logo-wordmark.svg" width="240"></a>
     </h1>
+
+    <div class="search relative w-full">
+    <input type="text" class="w-full bg-purple-900 p-4 placeholder:text-blue-100 rounded-lg font-medium text-lg tracking-wide" placeholder="Search ">
+      <span class="material-symbols-sharp absolute right-4 top-1/2 -translate-y-1/2">search</span>
+    </div>
+
+    <div class="quicklinks grid grid-cols-2 grid-rows-2 gap-2 mt-2">
+      <a href="#" class="p-4 bg-black-600 rounded-lg inline-block flex flex-col justify-end">
+        <span class="material-symbols-sharp block text-black-300 mb-1">person</span>
+        <span class="label text-lg block line-clamp-2 leading-tight trackng-wide font-light"><strong class="font-medium">Sign in</strong> or<br/><strong class="font-medium">Subscribe</strong></span>
+      </a>
+      <a href="#" class="p-4 bg-black-600 rounded-lg inline-block flex flex-col justify-end">
+        <span class="material-symbols-sharp block text-black-300 mb-1">mail</span>
+        <span class="label text-lg block line-clamp-2 leading-tight trackng-wide"><strong class="font-medium">Newsletters</strong></span>
+      </a>
+      <a href="#" class="p-4 bg-black-600 rounded-lg inline-block flex flex-col justify-end">
+        <span class="material-symbols-sharp block text-black-300 mb-1">sports_baseball</span>
+        <span class="label text-lg block line-clamp-2 leading-tight trackng-wide"><strong class="font-medium">Postseason</strong></span>
+      </a>
+      <a href="#" class="p-4 bg-black-600 rounded-lg inline-block flex flex-col justify-end">
+        <span class="material-symbols-sharp block text-black-300 mb-1">emergency</span>
+        <span class="label text-lg block line-clamp-2 leading-tight trackng-wide"><strong class="font-medium">Blood Drive</strong></span>
+      </a>
+    </div>
+
+  </div>
+
+
+    <!-- Company Column -->
+    <div class="space-y-2 mb-8 relative z-10 pt-6 md:pt-4">
+
+      <div class="logo absolute opacity-10 pointer-events-none z-0 -left-1/4 top-1/3 sm:top-1/2 -translate-y-1/5 sm:hidden">
+        <img class="w-screen -rotate-45 scale-150" src="assets/images/logo-character.svg" alt="">
+      </div>
+
+      <h2 class="font-semibold text-base tracking-wide font-ultra-expanded text-orange uppercase !mb-4 z-10 relative !mt-0">SECTIONS</h2>
+      <ul class="space-y-3 z-10 relative">
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Politics & Power</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Education</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Community Issues</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Culture</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Sports</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Opinion</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Places</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Collections & Guides</a></li>
+
+      </ul>
+
+      
+    </div>
+
+    <!-- Contact Us Column -->
+    <div class="space-y-2 mb-8 border-t md:border-0 border-black-500 pt-6 md:pt-4 relative z-10">
+      <h2 class="font-semibold text-base tracking-wide font-ultra-expanded text-orange uppercase mb-4">CONTACT US</h2>
+      <ul class="space-y-3">
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Customer Care</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Contact The Newsroom</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Submit A Tip</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Advertise With Us</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Group Sales</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Enterprise Sales</a></li>
+
+      </ul>
+    </div>
+
+    <!-- Terms & Services Column -->
+    <div class="space-y-2 mb-8 border-t md:border-0 border-black-500 pt-6 md:pt-4 z-10 relative">
+      <h2 class="font-semibold text-base tracking-wide font-ultra-expanded text-orange uppercase mb-4">The Banner</h2>
+      <ul class="space-y-3">
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Our Impact</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Culture & Careers</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Newsroom Policies</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Code of Ethics</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Creatives in Residence</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#">Donate</a></li>
+        <li class="text-3xl uppercase font-ultra-condensed font-semibold leading-none tracking-wide"><a href="#" class="bg-orange hover:bg-purple text-white p-2 inline-block relative -left-2">Subscribe for $1</a></li>
+
+
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Legal content row for Desktop -->
+  <div class="md:flex flex-col justify-between p-4 text-black-300 md:px-12">
+
+    <div class="social border-t border-black-500 pt-8 mb-8">
     <div class="flex">
       <a href="#" class="w-14 h-14 flex items-center justify-center border border-black-500 p-1">
-        <img class="w-6 h-6" src="assets/images/icon-instagram-white.svg" alt="Instagram">
+        <img class="w-8 h-8" src="assets/images/icon-instagram-white.svg" alt="Instagram">
       </a>
       <a href="#" class="w-14 h-14 flex items-center justify-center border border-black-500 p-1">
-        <img class="w-6 h-6" src="assets/images/icon-linkedin-white.svg" alt="LinkedIn">
+        <img class="w-8 h-8" src="assets/images/icon-linkedin-white.svg" alt="LinkedIn">
       </a>
       <a href="#" class="w-14 h-14 flex items-center justify-center border border-black-500 p-1">
-        <img class="w-6 h-6" src="assets/images/icon-facebook-white.svg" alt="Facebook">
+        <img class="w-8 h-8" src="assets/images/icon-facebook-white.svg" alt="Facebook">
       </a>
       <a href="#" class="w-14 h-14 flex items-center justify-center border border-black-500 p-1">
-        <img class="w-6 h-6" src="assets/images/icon-x-white.svg" alt="X / Twitter">
+        <img class="w-8 h-8" src="assets/images/icon-x-white.svg" alt="X / Twitter">
       </a>
       <a href="#" class="w-14 h-14 flex items-center justify-center border border-black-500 p-1">
-        <img class="w-6 h-6" src="assets/images/icon-mastadon-white.svg" alt="Mastadon">
+        <img class="w-8 h-8" src="assets/images/icon-mastadon-white.svg" alt="Mastadon">
       </a>
       <!-- ... You can add other icons similarly ... -->
     </div>
   </div>
 
-
-    <!-- Company Column -->
-    <div class="space-y-2 mb-8">
-      <h2 class="font-bold text-2xl font-ultra-condensed">COMPANY</h2>
-      <ul class="space-y-2">
-        <li class="text-lg"><a href="#">About us</a></li>
-        <li class="text-lg"><a href="#">Newsroom policies & code of ethics</a></li>
-        <li class="text-lg"><a href="#">People, culture, & diversity</a></li>
-        <li class="text-lg"><a href="#">Careers</a></li>
-        <li class="text-lg"><a href="#">Creatives in Residence</a></li>
-        <li class="text-lg"><a href="#">Support us</a></li>
-      </ul>
-    </div>
-
-    <!-- Contact Us Column -->
-    <div class="space-y-2 mb-8">
-      <h2 class="font-bold text-2xl font-ultra-condensed">CONTACT US</h2>
-      <ul class="space-y-2">
-        <li class="text-lg"><a href="#">Customer care</a></li>
-        <li class="text-lg"><a href="#">Contact the newsroom & tips</a></li>
-        <li class="text-lg"><a href="#">Advertise with us</a></li>
-        <li class="text-lg"><a href="#">Group & enterprise sales</a></li>
-      </ul>
-    </div>
-
-    <!-- Terms & Services Column -->
-    <div class="space-y-2 mb-8">
-      <h2 class="font-bold text-2xl font-ultra-condensed">TERMS & SERVICES</h2>
-      <ul class="space-y-2">
-        <li class="text-lg"><a href="#">Privacy policy</a></li>
-        <li class="text-lg"><a href="#">Terms of service</a></li>
-        <li class="text-lg"><a href="#">Terms of sale</a></li>
-        <li class="text-lg"><a href="#">Cookie policy</a></li>
-        <li class="text-lg"><a href="#">RSS terms of service</a></li>
-        <li class="text-lg"><a href="#">Submissions & discussion policy</a></li>
-        <li class="text-lg"><a href="#">Ad choices</a></li>
-        <li class="text-lg"><a href="#">Do not sell my personal information</a></li>
-        <li class="text-lg"><a href="#">CA notice at collection and privacy notice</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- Legal content row for Desktop -->
-  <div class="md:flex flex-col justify-between p-4 text-black-300">
-    <p class="border-t border-black-500 pt-8 mb-6">&copy; 2023 The Baltimore Banner. All Rights Reserved.</p>
-    <p class="mb-6 md:mb-2">Use of this site constitutes acceptance of our Terms of Service and Privacy Policies</p>
-    <p class="mb-6 md:mb-2">The Baltimore Banner may receive compensation for some links to products and services on this website. Offers may be subject to change without notice.</p>
-    <p class="mb-6 md:mb-2">The Baltimore Banner is a trademark registered in the U.S. for The Venetoulis Institute for Local Journalism, a 501(c)(3) nonprofit organization. Click <a href="#">here</a> to learn more about supporting local journalism.</p>
+    <p class="mb-6">&copy; 2023 <a href="#" class="underline">The Baltimore Banner</a>. All Rights Reserved.</p>
+<p class="mb-6">Use of this site constitutes acceptance of our <a href="#" class="underline">Terms of Service</a> and <a href="#" class="underline">Privacy Policies</a>.</p>
+<p class="mb-6"><a href="#" class="underline">The Baltimore Banner</a> may receive compensation for some links to products and services on this website. Offers may be subject to change without notice. See our <a href="#" class="underline">Cookie Policy</a>, <a href="#" class="underline">RSS Terms of Service</a>, <a href="#" class="underline">Submissions Policy</a>, <a href="#" class="underline">Ad Choices</a>, <a href="#" class="underline">Do Not Sell My Personal Information</a>, and <a href="#" class="underline">CA Notice at Collection at Privacy Notice</a>.
+<a href="#" class="underline">The Baltimore Banner</a> is a trademark registered in the U.S. for <a href="#" class="underline">The Venetoulis Institute for Local Journalism</a>, a 501(c)(3) nonprofit organization.</p>
+<p class="mb-6"><a href="#" class="underline">Click here to learn more about supporting local journalism.</a>
+</p>
   </div>
 </div>
